Add example graph on display page

--- a/octopus_display/templates/smart_plug/display.html
+++ b/octopus_display/templates/smart_plug/display.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Electricity Front-End Display</h1>
+    <div class="">
+      <img src="{% static 'images/example_graph.png' %}" alt="A graph displaying refrigerator electricity demand and Octopus Agile price data">
+    </div>
   </body>
 </html>
