Add link to detail page

--- a/octopus_display/templates/smart_plug/homepage.html
+++ b/octopus_display/templates/smart_plug/homepage.html
@@ -10,6 +10,7 @@
     <h2>Table of Contents</h2>
     <ol>
       <a href="{% url 'display' %}">Display</a>
+      <a href="{% url 'detail' %}">Detail</a>
     </ol>
 
 
