--- a/octopus_display/templates/smart_plug/homepage.html
+++ b/octopus_display/templates/smart_plug/homepage.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Homepage</title>
+    <link rel="stylesheet" href="{% static "css/indexstyle.css" %}"/>
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
   </head>
   <body>
+    <ul>
+      <li><a href="{% url 'homepage' %}">Homepage</a></li>
+      <li><a href="{% url 'display' %}">Display</a></li>
+      <li><a href="{% url 'detail' %}">Detail</a></li>
+      <li><a href="{% url 'about' %}">About</a></li>
+    </ul>
     <h1>Electricity Front-End Homepage</h1>
-    <p>This project is going to display data collected from TP Link smart plug and Octopus Energy API.</p>
-    <h2>Table of Contents</h2>
-    <ol>
-      <a href="{% url 'display' %}">Display</a>
-      <a href="{% url 'detail' %}">Detail</a>
-    </ol>
-
-
+    <p>This project displays data collected from a TP Link smart plug and the Octopus Energy API.</p>
   </body>
 </html>
