--- a/octopus_display/static/css/indexstyle.css
+++ b/octopus_display/static/css/indexstyle.css
@@ -1,6 +1,57 @@
-.center {
-  display: block;
+html{
+  font-family: 'Karla', sans-serif;
+}
+
+h1{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-weight: bolder;
+  color: blue;
+}
+
+h2{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-weight: lighter;
+}
+
+p{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: grey;
+}
+
+table{
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+}
+
+ul{
+  font-family: 'Karla', sans-serif;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
+
+li{
+  float: left;
+}
+
+li a{
+  display: block;
+  color: #000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
 }
