Working on copy and content

--- a/octopus_display/templates/smart_plug/about.html
+++ b/octopus_display/templates/smart_plug/about.html
@@ -11,10 +11,21 @@
     <li><a href="{% url 'homepage' %}">Homepage</a></li>
     <li><a href="{% url 'display' %}">Display</a></li>
     <li><a href="{% url 'detail' %}">Detail</a></li>
-    <li><a href="{% url 'about' %}">About</a></li>
+    <li><a href="{% url 'about' %}" >About</a></li>
   </ul>
   <body>
-    <h1>An example title</h1>
-    <p>Some example text</p>
+    <h1>Luka Vlaskalic</h1>
+    <p>Capable data professional looking for a role in data analysis or back-end
+      development. I have a wide range of experience within purpose-driven startups
+      in the energy industry, which has required initiative and the ability to
+      learn new skills on the job.
+    </p>
+    <p>Passionate about working on projects that focus on climate change resolution.</p>
+    <!-- <ul>
+      <li><a href="https://www.linkedin.com/in/luka-vlaskalic-bba5988a/">LinkedIn</a></li>
+      <li><a href="https://github.com/Vlasko/">GitHub</a></li>
+    </ul> -->
+
+
   </body>
 </html>
