Change height of images

--- a/octopus_display/templates/smart_plug/homepage.html
+++ b/octopus_display/templates/smart_plug/homepage.html
@@ -30,13 +30,13 @@
     <div style="text-align:center">
     <div class="row">
     <div class="column">
-      <img src="{% static "images/octopus-energy.webp" %}" alt="Snow" style="width:20%">
+      <img src="{% static "images/octopus-energy.webp" %}" alt="Snow" style="height:200px">
     </div>
     <div class="column">
-      <img src="{% static "images/TPLINK.svg" %}" alt="Forest" style="width:20%">
+      <img src="{% static "images/TPLINK.svg" %}" alt="Forest" style="height:200px">
     </div>
     <div class="column">
-      <img src="{% static "images/aws-s3.png" %}" style="width:20%">
+      <img src="{% static "images/aws-s3.png" %}" style="height:200px">
     </div>
     </div>
     </div>
