--- a/octopus_display/templates/smart_plug/about.html
+++ b/octopus_display/templates/smart_plug/about.html
@@ -7,25 +7,25 @@
     <link rel="stylesheet" href="{% static "css/indexstyle.css" %}"/>
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
   </head>
-  <ul>
+  <ul class="nav-bar">
     <li><a href="{% url 'homepage' %}">Homepage</a></li>
     <li><a href="{% url 'display' %}">Display</a></li>
     <li><a href="{% url 'detail' %}">Detail</a></li>
     <li><a href="{% url 'about' %}" >About</a></li>
   </ul>
   <body>
-    <h1>Luka Vlaskalic</h1>
-    <p>Capable data professional looking for a role in data analysis or back-end
+    <h1 class="centred-heading">Luka Vlaskalic</h1>
+    <p class="centred-text">Capable data professional looking for a role in data analysis or back-end
       development. I have a wide range of experience within purpose-driven startups
       in the energy industry, which has required initiative and the ability to
       learn new skills on the job.
     </p>
-    <p>Passionate about working on projects that focus on climate change resolution.</p>
-    <!-- <ul>
-      <li><a href="https://www.linkedin.com/in/luka-vlaskalic-bba5988a/">LinkedIn</a></li>
-      <li><a href="https://github.com/Vlasko/">GitHub</a></li>
-    </ul> -->
-
-
+    <p class="centred-text">Passionate about working on projects that focus on climate change resolution.</p>
+    <div class="center-list">
+      <ul class="link-list">
+        <li><a href="https://www.linkedin.com/in/luka-vlaskalic-bba5988a/">LinkedIn</a></li>
+        <li><a href="https://github.com/Vlasko/">GitHub</a></li>
+      </ul>
+    </div>
   </body>
 </html>
