--- a/octopus_display/templates/smart_plug/detail.html
+++ b/octopus_display/templates/smart_plug/detail.html
@@ -8,13 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
   </head>
   <body>
-    <ul>
+    <ul class="nav-bar">
       <li><a href="{% url 'homepage' %}">Homepage</a></li>
       <li><a href="{% url 'display' %}">Display</a></li>
       <li><a href="{% url 'detail' %}">Detail</a></li>
       <li><a href="{% url 'about' %}">About</a></li>
     </ul>
-    <h1>Raw Data</h1>
+    <h1 class="centred-heading">Raw Data</h1>
     {% if instances %}
     <table>
       <thead>
