Get links list to be centered

--- a/octopus_display/templates/smart_plug/about.html
+++ b/octopus_display/templates/smart_plug/about.html
@@ -21,11 +21,9 @@
       learn new skills on the job.
     </p>
     <p class="centred-text">Passionate about working on projects that focus on climate change resolution.</p>
-    <div class="center-list">
-      <ul class="link-list">
-        <li><a href="https://www.linkedin.com/in/luka-vlaskalic-bba5988a/">LinkedIn</a></li>
-        <li><a href="https://github.com/Vlasko/">GitHub</a></li>
-      </ul>
-    </div>
+    <ul style="justify-content: center;padding-left: 0;">
+      <li class="link-list"><a href="https://www.linkedin.com/in/luka-vlaskalic-bba5988a/"target="_blank">LinkedIn</a></li>
+      <li class="link-list"><a href="https://github.com/Vlasko/"target="_blank">GitHub</a></li>
+    </ul>
   </body>
 </html>
