--- a/octopus_display/templates/smart_plug/about.html
+++ b/octopus_display/templates/smart_plug/about.html
@@ -6,6 +6,7 @@
     <title>About</title>
     <link rel="stylesheet" href="{% static "css/indexstyle.css" %}"/>
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
+
   </head>
   <ul class="nav-bar">
     <li><a href="{% url 'homepage' %}">Homepage</a></li>
@@ -25,5 +26,10 @@
       <li class="link-list"><a href="https://www.linkedin.com/in/luka-vlaskalic-bba5988a/"target="_blank">LinkedIn</a></li>
       <li class="link-list"><a href="https://github.com/Vlasko/"target="_blank">GitHub</a></li>
     </ul>
+    <!-- Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
+    <!-- Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
+    <!-- Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
+    <!-- Icons made by <a href="https://smashicons.com/" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
+    <!-- Icons made by <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
   </body>
 </html>
