--- a/octopus_display/templates/smart_plug/about.html
+++ b/octopus_display/templates/smart_plug/about.html
@@ -22,14 +22,24 @@
       learn new skills on the job.
     </p>
     <p class="centred-text">Passionate about working on projects that focus on climate change resolution.</p>
-    <ul style="justify-content: center;padding-left: 0;">
-      <li class="link-list"><a href="https://www.linkedin.com/in/luka-vlaskalic-bba5988a/"target="_blank">LinkedIn</a></li>
-      <li class="link-list"><a href="https://github.com/Vlasko/"target="_blank">GitHub</a></li>
+    <p class="centred-text">
+      <img src="{% static "images/university.svg" %}" alt="Mortarboard Icon" style="vertical-align:middle;height:50px;;margin:15px 15px">
+        1st MPhys Physics with Philosophy (Overall Average Grade - 73%)
+    </p>
+    <ul class="center-list">
+      <li class="link-list">
+        <a href="https://www.linkedin.com/in/luka-vlaskalic-bba5988a/"target="_blank">
+          <img src="{% static "images/linkedin.svg" %}" alt="LinkedIn Logo" style="height:50px;margin:15px 15px">
+        </a>
+      </li>
+      <li class="link-list">
+        <a href="https://github.com/Vlasko/"target="_blank">
+          <img src="{% static "images/github.svg" %}" alt="GitHub Logo" style="height:50px;margin:15px 15px">
+        </a>
+      </li>
     </ul>
-    <!-- Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
-    <!-- Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
-    <!-- Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
-    <!-- Icons made by <a href="https://smashicons.com/" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
-    <!-- Icons made by <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
+    <p class="centred-footer">
+      Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect"target="_blank" title="Pixel perfect">Pixel perfect</a> and <a href="https://www.flaticon.com/authors/freepik"target="_blank" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+    </p>
   </body>
 </html>
